start new version

--- a/index.html
+++ b/index.html
@@ -35,41 +35,40 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the Hebrew language and texts</h3>
+                        <!-- <h3 class="heading-tertiary u-margin-bottom-small">
+                            Having difficulty reading Hebrew?
+                        </h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Want to learn how to read Hebrew?
+                        </h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Need "Bar Mitzvah" lessons for your son?
+                        </h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Looking to connect to the Jewish culture?
+                        </h3>
                         <p class="paragraph">
                             Our classes will enrich your family and community integration as you or your child will be comfortable in any Jewish setting and environment!
                         </p>
-                        <h3 class="heading-tertiary u-margin-bottom-small">You will be able to read Hebrew fluently</h3>
                         <p class="paragraph">
                             With our Jewish Culture Enrichment Classes you will attain fluency in Hebrew reading and begin to understand classic Jewish texts like the Torah and the Talmud.
 
-                            <!-- In many ways the key to connecting to the Jewish culture is through the knowledge of the Hebrew language and reading fluency and the basics of grammar in Hebrew are from the most basic and important steps to this.
+                            In many ways the key to connecting to the Jewish culture is through the knowledge of the Hebrew language and reading fluency and the basics of grammar in Hebrew are from the most basic and important steps to this.
 
-                            This allows the student the ability to read and understand all classical Jewish texts including the Talmud which besides connecting them to the Jewish culture also are a major factor to grow as a person and better himself with very important ideas and modes of behaviour. -->
-                        </p>
-                        <p class="paragraph">
-                            Our classes will enrich your family and community integration as you or your child will be comfortable in any Jewish setting and environment!
-                        </p>
-                        <h3 class="heading-tertiary u-margin-bottom-small">You will be able to read Hebrew fluently</h3>
-                        <p class="paragraph">
-                            With our Jewish Culture Enrichment Classes you will attain fluency in Hebrew reading and begin to understand classic Jewish texts like the Torah and the Talmud.
+                            This allows the student the ability to read and understand all classical Jewish texts including the Talmud which besides connecting them to the Jewish culture also are a major factor to grow as a person and better himself with very important ideas and modes of behaviour.
 
-                            <!-- In many ways the key to connecting to the Jewish culture is through the knowledge of the Hebrew language and reading fluency and the basics of grammar in Hebrew are from the most basic and important steps to this.
-
-                            This allows the student the ability to read and understand all classical Jewish texts including the Talmud which besides connecting them to the Jewish culture also are a major factor to grow as a person and better himself with very important ideas and modes of behaviour. -->
                             For over 30 years, Rabbi Zobin and his staff have successfully lead thousands to rapidly achieve Hebrew reading fluency, major progress in their Jewish studies and connection to their heritage and roots. In many ways the key to connecting to the Jewish culture is through the knowledge of the Hebrew language and reading fluency and the basics of grammar in Hebrew are from the most basic and important steps to this. This allows the student the ability to read and understand all classical Jewish texts including the Talmud which besides connecting them to the Jewish culture also are a major factor to grow as a person and better himself with very important ideas and modes of behaviour.
-                        </p>
+                        </p> -->
 
                         <a href="#" class="btn-text">Sign up today &rarr;</a>
-                    </div>
-                    <div class="col">
+                    <!-- </div> -->
+                    <!-- <div class="col">
                         <div class="composition">
                             <img src="img/img5.jpeg" alt="image" class="composition__photo composition__photo--p1">
                             <img src="img/man-praying.jpeg" alt="image" class="composition__photo composition__photo--p2">
                             <img src="img/barmitzvah.jpeg" alt="image" class="composition__photo composition__photo--p3">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
@@ -114,7 +113,7 @@
                 </div>
             </section>
 
-            <section class="section-tours" id="section-tours">
+            <!-- <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Who is this for?
@@ -129,7 +128,7 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--1">Hebrew Reading Basics</span>
+                                    <span class="card__heading-span card__heading-span--1">Bar-Mitzvah Student</span>
                                     
                                 </h4>
                                 <div class="card__details">
@@ -221,7 +220,7 @@
                     <a href="#" class="btn btn--green">Book a Free session</a>
                 </div>
 
-            </section>
+            </section> -->
 
             <section class="section-stories">
                 <div class="bg-video">
@@ -241,7 +240,7 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img class="story__image story__image--1" src="img/boy.jpeg" alt="Person on a tour">
+                            <img class="story__image story__image--1" src="https://randomuser.me/api/portraits/men/85.jpg" alt="Person on a tour">
                             <figcaption class="story__caption">David stein</figcaption>
                         </figure>
                         <div class="story__text">
@@ -254,7 +253,7 @@
                     </div>
                     <div class="story">
                         <figure class="story__shape">
-                            <img class="story__image story__image--2" src="img/fatherandson.jpeg" alt="Person on a tour">
+                            <img class="story__image story__image--2" src="https://randomuser.me/api/portraits/men/42.jpg" alt="Person on a tour">
                             <figcaption class="story__caption">Mark Fabian</figcaption>
                         </figure>
                         <div class="story__text">
