edit cta content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             For over 30 years, Rabbi Zobin and his staff have successfully lead thousands to rapidly achieve Hebrew reading fluency, major progress in their Jewish studies and connection to their heritage and roots. In many ways the key to connecting to the Jewish culture is through the knowledge of the Hebrew language and reading fluency and the basics of grammar in Hebrew are from the most basic and important steps to this. This allows the student the ability to read and understand all classical Jewish texts including the Talmud which besides connecting them to the Jewish culture also are a major factor to grow as a person and better himself with very important ideas and modes of behaviour.
                         </p>
                     </div>
-                    <!-- <a href="#" class="btn-text">Sign up today &rarr;</a> -->
+                    <a href="#" class="btn-text">Sign up today &rarr;</a>
                 </div>
                 
             </section>
@@ -293,7 +293,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                    <a href="#" class="btn-text">Sign up today &rarr;</a>
                 </div>
             </section>
 
