edit feature animation

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <section class="section-features">
                 <div class="row">
-                    <div class="col" data-aos="zoom-in"data-aos-delay="800">
+                    <div class="col" data-aos="zoom-in">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-display"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Learn Online</h3>
@@ -140,7 +140,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in" data-aos-delay="600">
+                    <div class="col"data-aos="zoom-in" data-aos-delay="400">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-calendar"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Flexible Schedule</h3>
@@ -149,7 +149,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col"data-aos="zoom-in" data-aos-delay="600">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-clockwise"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Rapid  Success</h3>
@@ -158,7 +158,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in">
+                    <div class="col"data-aos="zoom-in"data-aos-delay="800">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-message-multiple"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Satisfied Customers</h3>
@@ -317,7 +317,7 @@
                             <p>
                                 I am writing to express again my high level of satisfaction for the. I had an amazing teacher who was able to understand my needs and he brilliantly  tailored his teaching to follow and answer my specific requests.
 
-                                I tried many times to start studying Hebrew by myself, but then I always stopped after a while, meeting some difficulties. After the course I again had a look at the Hebrew books I already tried, and now they seem to be much clearer, understandable and meaningful.
+                                I tried many times to start studying Hebrew by myself, but then I always stopped after a while, meeting some difficulties. After the course I had a look at the Hebrew books I already tried, and now they seem to be much clearer, understandable and meaningful.
 
                                 So I want to say that the course fully reached and fulfilled my personal aims. Thank you
                             </p>
