--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                     <div class="questions-container__icon questions-container__icon--left">&#63;</div>
                     <div class="questions-container__icon questions-container__icon--right">&#63;</div>
                     <div class="questions">
-                        <div data-aos="flip-left" data-aos-delay="600" class=" u-margin-bottom-small questions__question">
+                        <div data-aos="flip-right" data-aos-delay="1200" class=" u-margin-bottom-small questions__question">
                             <h3 class="heading-tertiary">
                                 Need "Bar-Mitzvah" lessons for your son?
                             </h3>
                         </div>
-                        <div data-aos="flip-left" data-aos-delay="800" class=" u-margin-bottom-small questions__question">
+                        <div data-aos="flip-right" data-aos-delay="1000" class=" u-margin-bottom-small questions__question">
                             <h3 class="heading-tertiary">
                                 Hesitant to pick up a prayer book in the synagogue?
                             </h3>
                         </div>
-                        <div data-aos="flip-left" data-aos-delay="1000" class=" u-margin-bottom-small questions__question">
+                        <div data-aos="flip-right" data-aos-delay="800" class=" u-margin-bottom-small questions__question">
                             <h3 class="heading-tertiary">
                                 Want to learn Hebrew to read Jewish texts?
                             </h3>
                         </div>
-                        <div data-aos="flip-left" data-aos-delay="1200" class=" u-margin-bottom-small questions__question">
+                        <div data-aos="flip-right" data-aos-delay="600" class=" u-margin-bottom-small questions__question">
                             <h3 class="heading-tertiary">
                                 Looking to connect to the Jewish culture?
                             </h3>
@@ -73,7 +73,7 @@
             </section>
             <section class="section-solution">
                 <div class="section-solution__content">
-                    <div data-aos="fade-down" data-aos-delay="400" class="u-center-text u-margin-bottom-big">
+                    <div data-aos="fade-down" class="u-center-text u-margin-bottom-big">
                         <h2 class="heading-secondary solution__title">
                             We've got you covered!
                         </h2>
@@ -84,27 +84,39 @@
                             With our Jewish Culture Enrichment Classes you will
                         </div> -->
                         <div class="heading-tertiary solution__item">
-                            <p data-aos="fade" data-aos-delay="800" class="solution__item-header">
+                            <p data-aos="fade"data-aos-anchor-placement="top-bottom" class="solution__item-header">
                                 rapidly achieve fluency in Hebrew reading
                             </p>
                             <div class="check-mark">&check;</div>
                         </div>
                         <div class="heading-tertiary solution__item">
-                            <p data-aos="fade" data-aos-delay="600" class="solution__item-header">
+                            <p data-aos="fade" data-aos-delay="400"data-aos-anchor-placement="top-bottom" class="solution__item-header">
                                 Understand classic Jewish
                                 texts like the Torah and the Talmud.
                             </p>
                             <div class="check-mark">&check;</div>
                         </div>
                         <div class="heading-tertiary solution__item">
-                            <p data-aos="fade" data-aos-delay="400" class="solution__item-header">
+                            <p data-aos="fade" data-aos-delay="600"data-aos-anchor-placement="top-bottom" class="solution__item-header">
                                 Over 30 years experience
                             </p>
                             <div class="check-mark">&check;</div>
                         </div>
                         <div class="heading-tertiary solution__item">
-                            <p data-aos="fade" class="solution__item-header">
+                            <p data-aos="fade" data-aos-delay="800" data-aos-anchor-placement="top-bottom" class="solution__item-header">
+                                your son will read hebrew like a pro in no time!
+                            </p>
+                            <div class="check-mark">&check;</div>
+                        </div>
+                        <div class="heading-tertiary solution__item">
+                            <p data-aos="fade"data-aos-delay="1000"data-aos-anchor-placement="top-bottom" class="solution__item-header">
                                 connect to your heritage and roots
+                            </p>
+                            <div class="check-mark">&check;</div>
+                        </div>
+                        <div class="heading-tertiary solution__item">
+                            <p data-aos="fade"data-aos-delay="1200"data-aos-anchor-placement="top-bottom" class="solution__item-header">
+                                you will feel at home with the prayer services! 
                             </p>
                             <div class="check-mark">&check;</div>
                         </div>
@@ -131,7 +143,7 @@
 
             <section class="section-features">
                 <div class="row">
-                    <div class="col" data-aos="zoom-in">
+                    <div class="col" data-aos="zoom-in" data-aos-delay="800">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-display"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Learn Online</h3>
@@ -140,7 +152,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col"data-aos="zoom-in" data-aos-delay="600">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-calendar"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Flexible Schedule</h3>
@@ -149,7 +161,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in" data-aos-delay="600">
+                    <div class="col"data-aos="zoom-in" data-aos-delay="400">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-clockwise"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Rapid  Success</h3>
@@ -158,7 +170,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col"data-aos="zoom-in"data-aos-delay="800">
+                    <div class="col"data-aos="zoom-in">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-message-multiple"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Satisfied Customers</h3>
