add 'offer' feature

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <span class="heading-primary--sub">Connect to the Jewish culture</span>
                 </h1>
                 <a href="https://form.jotform.com/201164168200038" target="blank" class="btn btn--white btn--animated">Sign up today</a>
+                <p class="offer">first 5 receive 80% off a trial session</p>
             </div>
         </header>
         <!-- Improve your reading and understanding of Jewish  -->
@@ -139,6 +140,10 @@
                         </div>
                     </div>
                     <div class="row solution__text">
+                        <div class="sign-up-offer">
+                            <a href="https://form.jotform.com/201164168200038" target="blank" class="btn-text">Sign up today &rarr;</a>
+                            <p class="offer">First 5 receive 80% off a trial session</p>
+                        </div>
                         <div class="paragraph">
                             <p class="u-margin-bottom-small">
                                 For over 30 years, Rabbi Zobin and his staff have successfully lead thousands to rapidly achieve Hebrew reading fluency, major progress in their Jewish studies and connection to their heritage and roots.
@@ -153,7 +158,6 @@
                                 Our classes will enrich your family and community integration as you or your child will be comfortable in any Jewish setting and environment!
                             </p>
                         </div>
-                        <a href="https://form.jotform.com/201164168200038" target="blank" class="btn-text">Sign up today &rarr;</a>
                     </div>
                 </div>  
             </section>
@@ -343,7 +347,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">My life is completely different now</h3>
                             <p>
-                                I am writing to express again my high level of satisfaction for the. I had an amazing teacher who was able to understand my needs and he brilliantly  tailored his teaching to follow and answer my specific requests.
+                                I am writing to express again my high level of satisfaction for the Hebrew course. I had an amazing teacher who was able to understand my needs and he brilliantly  tailored his teaching to follow and answer my specific requests.
 
                                 I tried many times to start studying Hebrew by myself, but then I always stopped after a while, meeting some difficulties. After the course I had a look at the Hebrew books I already tried, and now they seem to be much clearer, understandable and meaningful.
 
@@ -354,7 +358,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="https://form.jotform.com/201164168200038" target="blank" class="btn-text">Sign up today &rarr;</a>
+                    <a href="https://form.jotform.com/201164168200038" target="blank" class="btn-text btn-text__dark">Sign up today &rarr;</a>
                 </div>
             </section>
 
