edit 'offer' text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="heading-primary--sub">Connect to the Jewish culture</span>
                 </h1>
                 <a href="https://form.jotform.com/201164168200038" target="blank" class="btn btn--white btn--animated">Sign up today</a>
-                <p class="offer">first 5 receive 80% off a trial session</p>
+                <p class="offer btn--animated">first 5 receive a FREE trial session</p>
             </div>
         </header>
         <!-- Improve your reading and understanding of Jewish  -->
@@ -142,7 +142,7 @@
                     <div class="row solution__text">
                         <div class="sign-up-offer">
                             <a href="https://form.jotform.com/201164168200038" target="blank" class="btn-text">Sign up today &rarr;</a>
-                            <p class="offer">First 5 receive 80% off a trial session</p>
+                            <p class="offer">First 5 receive a FREE trial session</p>
                         </div>
                         <div class="paragraph">
                             <p class="u-margin-bottom-small">
