--- a/ycbm.html
+++ b/ycbm.html
@@ -82,7 +82,7 @@
                 <!-- </div> -->
                 <section class="section-tours" id="section-tours">
                     <div class="row">
-                        <div class="col"data-aos="flip-right" data-aos-delay="1000">
+                        <div class="col">
                             <div class="card">
                                 <div class="card__side card__side--front">
                                     <div class="card__picture card__picture--1"></div>
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col"data-aos="flip-right" data-aos-delay="800">
+                        <div class="col">
                             <div class="card">
                                 <div class="card__side card__side--front">
                                     <div class="card__picture card__picture--2"></div>
@@ -102,7 +102,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col"data-aos="flip-right" data-aos-delay="600">
+                        <div class="col">
                             <div class="card">
                                 <div class="card__side card__side--front">
                                     <div class="card__picture card__picture--3"></div>
